250915 [구현] FESTIVAL_LIST01 리스트 랜더링 처리 및 페이지네이션(스크롤 이벤트)

--- a/backup/src 그린트래벌 내가 한거/components/festivals/FestivalList.css
+++ b/backup/src 그린트래벌 내가 한거/components/festivals/FestivalList.css
@@ -10,9 +10,7 @@
   padding: 10px;
   background-color: #fff;
   color: #000;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
   gap: 20px;
   text-align: center;
 }
