--- a/src/components/festivals/FestivalList.css
+++ b/src/components/festivals/FestivalList.css
@@ -8,7 +8,7 @@
 .card {
   border-radius: 10px;
   padding: 10px;
-  background-color: #fff;
+  background-color: var(--personal-color-2);
   color: #000;
   display: flex;
   flex-direction: column;
